# tele-cli

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile.linux-test  LICENSE  NOTICE  README.md  install.sh  long_memory.md  personality.md  pyproject.toml  rules.md  setup.py  setup.sh  spec.md  ux_demo.py
docs/: memory-process.md
docs/wiki/: Architecture.md  Getting-Started.md  Home.md  Operations.md
scripts/: export_ux_demo_frames.py  render_ux_demo_pngs.ps1  run_docker_tests.ps1  run_docker_tests.sh
spec/: README.md  codex_app_server_integration_spec.md  codex_app_server_integration_test_plan.md  full_ui_migration_test_plan.md  services_and_lifecycle_spec.md  ux_spec.md  workspace_and_topic_memory.md
spec/runtime/: codex_app_server_integration.md  (+3 more)
src/: app_shell.py  cli.py  local_chat.py  logs_command.py  telegram_command.py
src/core/: models.py  (+6 more)
system/: session_instructions.md  sleep_prompt.md
tests/: __init__.py  test_admin.py  test_app_server_client.py  test_app_server_runtime.py  test_app_shell.py  test_approval_store.py  test_cli.py  test_codex_cli_config.py  test_host_service.py  test_install_script.py  test_installer.py  test_installer_lifecycle.py  test_jsonrpc.py  test_logs_command.py  test_packaging.py  test_runtime.py  test_service_flow.py  test_service_lifecycle.py  test_service_loop.py  test_session_store.py  test_setup_flow.py  test_setup_script.py  test_sleep.py  test_state_migration.py  test_telegram_client.py  test_telegram_command.py  test_telegram_html_flow.py  test_telegram_html_unit.py  test_telegram_markdown.py  test_telegram_queue.py  test_telegram_update_store.py  test_terminal_ui.py
(+116 files in other folders)
