[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tele-cli"
version = "0.1.0"
description = "Single-operator Codex and Telegram terminal bridge"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
tele-cli = "cli:main"
tele-cli-ux-demo = "demo_ui:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
