[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tele-cli"
version = "0.1.0"
description = "Single-operator Codex and Telegram terminal bridge"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
tele-cli = "cli:main"
tele-cli-ux-demo = "demo_ui:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["cli", "app_shell", "app_meta", "local_chat", "telegram_command"]

[tool.setuptools.package-data]
runtime = ["resources/*.md", "resources/defaults/*.md"]
storage = ["migrations/*.sql"]

[tool.setuptools.packages.find]
where = ["src"]
